// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateEditor onlyDatePicker snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-uliqdc"
  >
    <input
      aria-label="enter a date"
      class="css-1qqniy8"
      id="propdate"
      max="9999-12-31"
      name="propdate"
      type="date"
    />
  </div>
</DocumentFragment>
`;

exports[`DateEditor onlyTimePicker snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-uliqdc"
  >
    <input
      aria-label="enter a time"
      class="css-1qqniy8"
      id="proptime"
      name="proptime"
      type="time"
    />
  </div>
</DocumentFragment>
`;

exports[`DateEditor overview snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-uliqdc"
  >
    <input
      aria-label="enter a date"
      class="css-1qqniy8"
      id="propdate"
      max="9999-12-31"
      name="propdate"
      type="date"
    />
    <input
      aria-label="enter a time"
      class="css-1qqniy8"
      id="proptime"
      name="proptime"
      type="time"
    />
  </div>
</DocumentFragment>
`;
